--- a/ingles.html
+++ b/ingles.html
@@ -484,7 +484,7 @@
                     </h5>
                     <center>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rM5c7jxg7dM"></iframe>
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rM5c7jxg7dM" allowfullscreen></iframe>
                           </div>
                     </center>
                 </div>
